# ScoutString

./: CMakeLists.txt  README.md
Include/Scout/: Path.h  String.h
Src/: Path.cpp  ScoutString.cpp
